--- a/app/views/customer/advertisements/show.html.erb
+++ b/app/views/customer/advertisements/show.html.erb
@@ -42,7 +42,7 @@
           <div class="product-detail">
             <h4>End at:</h4>
             <p><%= @advertisement.end_at.strftime(time_format)%></p>
-          </div>xs
+          </div>
         </div>
       </div>
       <div class="col-sm-6">
