--- a/app/assets/stylesheets/customer/style.scss
+++ b/app/assets/stylesheets/customer/style.scss
@@ -64,7 +64,7 @@
 .customer-main-con{
   width: 100%;
   margin: 20px 0;
-  min-height: 400px;
+  min-height: 420px;
   .add-btn{
     margin: 10px 0;
   }
@@ -223,6 +223,10 @@
   }
 }
 
+.categories-main-con{
+  min-height: 200px;
+}
+
 .customer-main-show{
   width: 100%;
   padding: 20px 0;
@@ -274,6 +278,7 @@
 
 .searches_main_con{
   margin:30px 0;
+  min-height: 420px;
   h3{
       border-bottom: 1px solid #eeeeee;
       font-size: 24px;
