--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -6,38 +6,41 @@
   </div>
 </header>
 <div class="container">
-  <div class="row">
-    <div class="col-xs-12">
-      <% if @categories.any? %>
-          <h3 class="widget-title">Categories</h3>
-          <div class="row">
-            <% @category.subcategories.each do |subcategory| %>
-                <div class="col-md-4 col-sm-6 col-xs-12">
-                  <div class="owl-item">
-                    <div class="product owl-item-slide top-bottom-space">
-                      <a href="<%= subcategory_path(subcategory) %>"><%= subcategory.name %></a>
+  <div class="categories-main-con">
+    <div class="row">
+      <div class="col-xs-12">
+        <% if @categories.any? %>
+            <h3 class="widget-title">Categories</h3>
+            <div class="row">
+              <% @category.subcategories.each do |subcategory| %>
+                  <div class="col-md-4 col-sm-6 col-xs-12">
+                    <div class="owl-item">
+                      <div class="product owl-item-slide top-bottom-space">
+                        <a href="<%= subcategory_path(subcategory) %>"><%= subcategory.name %></a>
+                      </div>
                     </div>
                   </div>
-                </div>
-            <% end %>
-          </div>
-          <div class="gap"></div>
-      <% end %>
+              <% end %>
+            </div>
+            <div class="gap"></div>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
 
-<!--<div class="row">-->
-  <!--<div class="col-sm-4"></div>-->
-  <!--<div class="col-sm-4">-->
-    <!--<h2><%#= @category.name %></h2>-->
-  <!--</div>-->
-  <!--<div class="col-sm-4"></div>-->
 
-  <!--<div class="col-sm-12">-->
-    <!--<%# @category.subcategories.each do |subcategory| %>-->
-        <!--<a href="<%#= subcategory_path(subcategory) %>"><%#= subcategory.name %></a>-->
-        <!--<br>-->
-    <!--<%# end %>-->
-  <!--</div>-->
+<!--<div class="row">-->
+<!--<div class="col-sm-4"></div>-->
+<!--<div class="col-sm-4">-->
+<!--<h2><%#= @category.name %></h2>-->
+<!--</div>-->
+<!--<div class="col-sm-4"></div>-->
+
+<!--<div class="col-sm-12">-->
+<!--<%# @category.subcategories.each do |subcategory| %>-->
+<!--<a href="<%#= subcategory_path(subcategory) %>"><%#= subcategory.name %></a>-->
+<!--<br>-->
+<!--<%# end %>-->
+<!--</div>-->
 <!--</div>-->
