--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -38,23 +38,24 @@
             <% end %>
             <div class="product-page-side-section">
               <h5 class="product-page-side-title">Share This Item</h5>
-              <ul class="product-page-share-item">
-                <li>
-                  <a class="fa fa-facebook" href="#"></a>
-                </li>
-                <li>
-                  <a class="fa fa-twitter" href="#"></a>
-                </li>
-                <li>
-                  <a class="fa fa-pinterest" href="#"></a>
-                </li>
-                <li>
-                  <a class="fa fa-instagram" href="#"></a>
-                </li>
-                <li>
-                  <a class="fa fa-google-plus" href="#"></a>
-                </li>
-              </ul>
+              <%= social_share_button_tag(@product.name) %>
+              <!--<ul class="product-page-share-item">-->
+                <!--<li>-->
+                  <!--<a class="fa fa-facebook" href="#"></a>-->
+                <!--</li>-->
+                <!--<li>-->
+                  <!--<a class="fa fa-twitter" href="#"></a>-->
+                <!--</li>-->
+                <!--<li>-->
+                  <!--<a class="fa fa-pinterest" href="#"></a>-->
+                <!--</li>-->
+                <!--<li>-->
+                  <!--<a class="fa fa-instagram" href="#"></a>-->
+                <!--</li>-->
+                <!--<li>-->
+                  <!--<a class="fa fa-google-plus" href="#"></a>-->
+                <!--</li>-->
+              <!--</ul>-->
             </div>
             <div class="product-page-side-section">
               <h5 class="product-page-side-title">Shipping & Returns</h5>
